--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font:15px/1.5 Arial, Helvetica, 'Play' sans-serif;
+    /* font-family:15px/1.5 Arial, Helvetica, 'Play' sans-serif; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,7 +18,7 @@ h1 {
 }
 
 .login {
-    background: #e4e9e9;
+    background: #f6f6f6;
     padding: 40px;
     width: 280px;
     margin: auto;
@@ -26,6 +27,7 @@ h1 {
     height: 500px;
     margin-left: 180x;
     border-radius: 10px;
+    /* box-shadow: 0 0 5px gray; */
 }
 
 .form {
@@ -39,13 +41,14 @@ input {
     background: white;
     border: none;
     border-radius: 20px;
-    font-family: 'Play', san-serif;
-    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
     font-weight: 200px;
     padding: 10px 0;
     transition: border 0.5s;
     outline: none;
     color: #ffffff;
+    box-shadow: 0 0 5px rgb(187, 187, 187);
 }
 
 input[type=button] {
@@ -62,6 +65,7 @@ input[type=button] {
     border-radius: 40px;
     cursor: pointer;
     margin-left: 68px;  
+    box-shadow: 0 0 20px #aa5797;
 }
 
 input[type=button]:hover {
@@ -115,11 +119,13 @@ a:hover {
     background: white;
     color: #3b3998;
     margin-left: 80px;
+    box-shadow: 0 0 5px rgb(170, 170, 170);
 }
 
 .fa-google {
     background: white;
     color: #3b3993;
+    box-shadow: 0 0 5px rgb(170, 170, 170);
 }
 
 ::placeholder {
