--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    /* font-family:15px/1.5 Arial, Helvetica, 'Play' sans-serif; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(./img/backg1.jpg);
+    place-items: center;
 }
 
 h1 {
@@ -12,7 +12,6 @@ h1 {
     padding-top: 30px;
     color: #310126;
     margin: auto;
-    /* font-style: Arial, Helvetica, sans-serif; */
     font-size: 30px;
 
 }
@@ -22,12 +21,10 @@ h1 {
     padding: 40px;
     width: 280px;
     margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 45px;
     height: 500px;
     margin-left: 180x;
     border-radius: 10px;
-    /* box-shadow: 0 0 5px gray; */
 }
 
 .form {
@@ -44,10 +41,10 @@ input {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
     font-weight: 200px;
-    padding: 10px 0;
+    padding: 10px;
     transition: border 0.5s;
     outline: none;
-    color: #ffffff;
+    color: rgb(44, 42, 42);
     box-shadow: 0 0 5px rgb(187, 187, 187);
 }
 
@@ -95,7 +92,8 @@ a:hover {
 
 .fa {
     padding: 20px;
-    font-size: 30px;
+    font-size: 100px;
+    font-weight: bold;
     width: 20px;
     text-align: center;
     text-decoration: none;
@@ -105,10 +103,10 @@ a:hover {
 }
 
 .fa:hover {
-    color: #b13c95;
+    color: white;
+    background: #3b3998;
     opacity: 1;
     transition: 50ms;
-    
 }
   
 .fa:hover {
@@ -124,7 +122,7 @@ a:hover {
 
 .fa-google {
     background: white;
-    color: #3b3993;
+    color: #3d3998;
     box-shadow: 0 0 5px rgb(170, 170, 170);
 }
 
